--- a/src/greynoise/cli/templates/ip_context.txt.j2
+++ b/src/greynoise/cli/templates/ip_context.txt.j2
@@ -33,8 +33,8 @@ Tor: {{ ip_context.metadata.tor }}
 {%- endfor %}
 {%- if ip_context.raw_data.scan | length > 20 and not verbose %}
 Showing results 1 - 20. Run again with -v for full output.
-{% endif %}
 {%- endif %}
+{% endif %}
 
 {%- if ip_context.raw_data.web.paths %}
 [Paths]
@@ -43,7 +43,7 @@ Showing results 1 - 20. Run again with -v for full output.
 {%- endfor %}
 {%- if ip_context.raw_data.web_paths | length > 20 and not verbose %}
 Showing results 1 - 20. Run again with -v for full output.
-{% endif %}
+{%- endif %}
 {% endif %}
 
 {%- if ip_context.raw_data.ja3 %}
@@ -53,7 +53,7 @@ Showing results 1 - 20. Run again with -v for full output.
 {%- endfor %}
 {%- if ip_context.raw_data.ja3 | length > 20 and not verbose %}
 Showing results 1 - 20. Run again with -v for full output.
-{% endif %}
+{%- endif %}
 {% endif %}
 {%- else -%}
 {{ ip_context.ip }} has not been seen in scans in the past 30 days.
