--- a/src/greynoise/cli/templates/gnql.txt.j2
+++ b/src/greynoise/cli/templates/gnql.txt.j2
@@ -1,7 +1,5 @@
+{% import "macros.txt.j2" as macros %}
 {% for ip_context in gnql.data %}
-┌───────────────────────────┐
-│ {{ "{:^25}".format("Result {} of {}".format(loop.index, loop.length)) }} │
-└───────────────────────────┘
-{% include "ip_context.txt.j2" %}
-
-{% endfor %}
+{{ macros.result_header(loop) }}
+{%- include "ip_context.txt.j2" %}
+{%- endfor %}
