--- a/src/greynoise/cli/templates/actors.txt.j2
+++ b/src/greynoise/cli/templates/actors.txt.j2
@@ -1,9 +1,10 @@
 {% import "macros.txt.j2" as macros %}
+
 {% for actor in actors %}
 {{ macros.result_header(loop) }}
 Name: {{ actor.name }}
 IPs:
-{%- for ip in actor.ips %}
+{%- call(ip) macros.verbose_list(actor.ips, verbose) -%}
 - {{ ip }}
-{%- endfor %}
+{% endcall -%}
 {% endfor %}
