Add output format verification tests

--- a/src/greynoise/cli/templates/ip_context.txt.j2
+++ b/src/greynoise/cli/templates/ip_context.txt.j2
@@ -1,6 +1,5 @@
 {% import "macros.txt.j2" as macros %}
-
-{% if ip_context.seen %}
+{%- if ip_context.seen %}
          OVERVIEW:
 ----------------------------
 Actor: {{ ip_context.actor }}
