--- a/src/greynoise/cli/templates/ip_quick_check.txt.j2
+++ b/src/greynoise/cli/templates/ip_quick_check.txt.j2
@@ -1,1 +1,1 @@
-{{ ip_quick_check.ip }} is classified as {% if not ip_quick_check.noise %}NOT {% endif %}NOISE.
+<value>{{ ip_quick_check.ip }}</value> is classified as <bold>{% if not ip_quick_check.noise %}NOT {% endif %}NOISE</bold>.
