--- a/src/greynoise/cli/templates/macros.txt.j2
+++ b/src/greynoise/cli/templates/macros.txt.j2
@@ -25,3 +25,16 @@ Showing results 1 - 20. Run again with -v for full output.
 - <key>{{ "%-*s" | format(left_width, element[field_name]) }}</key> <value>{{ "%*s" | format(right_width, element.count) }}</value>
 {%- endfor %}
 {% endmacro %}
+
+# Render classification with proper color
+{% macro classification(value) %}
+{%- if value == "benign" -%}
+<benign>{{ value }}</benign>
+{%- elif value == "unknown" -%}
+<unknown>{{ value }}</unknown>
+{%- elif value == "malicious" -%}
+<malicious>{{ value }}</malicious>
+{%- else -%}
+<value>{{ value }}</value>
+{%- endif -%}
+{% endmacro %}
