--- a/src/greynoise/cli/templates/gnql_query.txt.j2
+++ b/src/greynoise/cli/templates/gnql_query.txt.j2
@@ -1,11 +1,11 @@
 {% import "macros.txt.j2" as macros %}
 {% for result in results -%}
-{{ macros.query_header(loop) -}}
+{% call macros.header(loop) %}Query{% endcall -%}
 Query: {{ result.query }}
-{%- if result.data %}
+{% if result.data %}
 {%- for ip_context in result.data %}
 {{ macros.result_header(loop) }}
-{%- include "ip_context.txt.j2" %}
+{%- include "ip_context_result.txt.j2" %}
 {%- endfor %}
 {% else %}
 No results found for this query.
