--- a/src/greynoise/cli/templates/gnql_query.txt.j2
+++ b/src/greynoise/cli/templates/gnql_query.txt.j2
@@ -2,7 +2,7 @@
 {% for result in results -%}
 {% call macros.header(loop) %}Query{% endcall -%}
 Query: {{ result.query }}
-{% if result.data %}
+{%- if result.data %}
 {%- for ip_context in result.data %}
 {{ macros.result_header(loop) }}
 {%- include "ip_context_result.txt.j2" %}
