Add error response to formatter output test case

--- a/src/greynoise/cli/templates/ip_context.txt.j2
+++ b/src/greynoise/cli/templates/ip_context.txt.j2
@@ -3,4 +3,4 @@
 {% call macros.header(loop) %}Context{% endcall -%}
 IP address: {{ ip_context.ip }}
 {% include "ip_context_result.txt.j2" %}
-{%- endfor %}
+{% endfor %}
