Handle verbose flag in column_list macro
Now called column_verbose_list

--- a/src/greynoise/cli/templates/macros.txt.j2
+++ b/src/greynoise/cli/templates/macros.txt.j2
@@ -25,12 +25,16 @@ Showing results 1 - 20. Run again with -v for full output.
 
 # Render tuples of element names and counts properly aligned
 # Width is based on the longest element in the list for each column
-{% macro column_list(elements, field_name) %}
+# Also render follow same rules as "verbose_list" to render long lists
+{% macro column_verbose_list(elements, field_name, verbose) %}
 {%- set left_width = elements | map(attribute=field_name) | map('length') | max %}
 {%- set right_width = elements | map(attribute='count') | map('string') | map('length') | max %}
-{%- for element in elements %}
+{%- for element in elements[:20 if not verbose else None] %}
 - <key>{{ "%-*s" | format(left_width, element[field_name]) }}</key> <value>{{ "%*s" | format(right_width, element.count) }}</value>
 {%- endfor %}
+{% if elements | length > 20 and not verbose -%}
+Showing results 1 - 20. Run again with -v for full output.
+{% endif -%}
 {% endmacro %}
 
 # Render classification with proper color
