--- a/src/greynoise/cli/templates/macros.txt.j2
+++ b/src/greynoise/cli/templates/macros.txt.j2
@@ -27,13 +27,14 @@ Showing results 1 - 20. Run again with -v for full output.
 # Width is based on the longest element in the list for each column
 # Also render follow same rules as "verbose_list" to render long lists
 {% macro column_verbose_list(elements, field_name, verbose) %}
+{%- set max_elements = 20 %}
 {%- set left_width = elements | map(attribute=field_name) | map('length') | max %}
 {%- set right_width = elements | map(attribute='count') | map('string') | map('length') | max %}
-{%- for element in elements[:20 if not verbose else None] %}
+{%- for element in elements[:max_elements if not verbose else None] %}
 - <key>{{ "%-*s" | format(left_width, element[field_name]) }}</key> <value>{{ "%*s" | format(right_width, element.count) }}</value>
 {%- endfor %}
-{% if elements | length > 20 and not verbose -%}
-Showing results 1 - 20. Run again with -v for full output.
+{% if elements | length > max_elements and not verbose -%}
+Showing results 1 - {{ max_elements }}. Run again with -v for full output.
 {% endif -%}
 {% endmacro %}
 
