--- a/src/greynoise/cli/templates/macros.txt.j2
+++ b/src/greynoise/cli/templates/macros.txt.j2
@@ -28,9 +28,10 @@ Showing results 1 - 20. Run again with -v for full output.
 # Also render follow same rules as "verbose_list" to render long lists
 {% macro column_verbose_list(elements, field_name, verbose) %}
 {%- set max_elements = 20 %}
-{%- set left_width = elements | map(attribute=field_name) | map('length') | max %}
-{%- set right_width = elements | map(attribute='count') | map('string') | map('length') | max %}
-{%- for element in elements[:max_elements if not verbose else None] %}
+{%- set elements_slice = elements[:max_elements if not verbose else None] %}
+{%- set left_width = elements_slice | map(attribute=field_name) | map('length') | max %}
+{%- set right_width = elements_slice | map(attribute='count') | map('string') | map('length') | max %}
+{%- for element in elements_slice %}
 - <key>{{ "%-*s" | format(left_width, element[field_name]) }}</key> <value>{{ "%*s" | format(right_width, element.count) }}</value>
 {%- endfor %}
 {% if elements | length > max_elements and not verbose -%}
