--- a/src/greynoise/cli/templates/macros.txt.j2
+++ b/src/greynoise/cli/templates/macros.txt.j2
@@ -15,11 +15,13 @@
 # Render all elements of a list when verbose=True
 # Otherwise, render first 20 elements and a message to remind user about verbose flag
 {% macro verbose_list(elements, verbose) %}
-{% for element in elements[:20 if not verbose else None] -%}
+{%- set max_elements = 20 %}
+{%- set elements_slice = elements[:max_elements if not verbose else None] %}
+{% for element in elements_slice -%}
 {{ caller(element) }}
 {%- endfor -%}
-{% if elements | length > 20 and not verbose -%}
-Showing results 1 - 20. Run again with -v for full output.
+{% if elements | length > max_elements and not verbose -%}
+Showing results 1 - {{ max_elements }}. Run again with -v for full output.
 {% endif -%}
 {% endmacro %}
 
