Use verbosity option as a counter, not as a flag

--- a/src/greynoise/cli/templates/macros.txt.j2
+++ b/src/greynoise/cli/templates/macros.txt.j2
@@ -16,11 +16,11 @@
 # Otherwise, render first 20 elements and a message to remind user about verbose flag
 {% macro verbose_list(elements, verbose) %}
 {%- set max_elements = 20 %}
-{%- set elements_slice = elements[:max_elements if not verbose else None] %}
+{%- set elements_slice = elements[:max_elements if verbose < 1 else None] %}
 {% for element in elements_slice -%}
 {{ caller(element) }}
 {%- endfor -%}
-{% if elements | length > max_elements and not verbose -%}
+{% if elements | length > max_elements and verbose < 1  -%}
 Showing results 1 - {{ max_elements }}. Run again with -v for full output.
 {% endif -%}
 {% endmacro %}
@@ -30,13 +30,13 @@ Showing results 1 - {{ max_elements }}. Run again with -v for full output.
 # Also render follow same rules as "verbose_list" to render long lists
 {% macro column_verbose_list(elements, field_name, verbose) %}
 {%- set max_elements = 20 %}
-{%- set elements_slice = elements[:max_elements if not verbose else None] %}
+{%- set elements_slice = elements[:max_elements if verbose < 1 else None] %}
 {%- set left_width = elements_slice | map(attribute=field_name) | map('length') | max %}
 {%- set right_width = elements_slice | map(attribute='count') | map('string') | map('length') | max %}
 {%- for element in elements_slice %}
 - <key>{{ "%-*s" | format(left_width, element[field_name]) }}</key> <value>{{ "%*s" | format(right_width, element.count) }}</value>
 {%- endfor %}
-{% if elements | length > max_elements and not verbose -%}
+{% if elements | length > max_elements and verbose < 1 -%}
 Showing results 1 - {{ max_elements }}. Run again with -v for full output.
 {% endif -%}
 {% endmacro %}
