Check if there are tags in IP context
During testing it has been found that there might not be tags for every
IP address and the template rendering would fail in that case without
this check.

--- a/src/greynoise/cli/templates/ip_context_result.txt.j2
+++ b/src/greynoise/cli/templates/ip_context_result.txt.j2
@@ -7,10 +7,12 @@
 <key>First seen</key>: <value>{{ ip_context.first_seen }}</value>
 <key>IP</key>: <value>{{ ip_context.ip }}</value>
 <key>Last seen</key>: <value>{{ ip_context.last_seen }}</value>
+{% if ip_context.tags -%}
 <key>Tags</key>:
 {%- call(tag) macros.verbose_list(ip_context.tags) -%}
 - <value>{{ tag }}</value>
-{% endcall %}
+{% endcall -%}
+{% endif %}
           <header>METADATA</header>
 ----------------------------
 <key>ASN</key>: <value>{{ ip_context.metadata.asn }}</value>
