Update noise ratio metric
Divide noise ip count by total number of ip addresses found.

--- a/src/greynoise/cli/templates/analyze.txt.j2
+++ b/src/greynoise/cli/templates/analyze.txt.j2
@@ -3,10 +3,10 @@
 ║ <header>{{ "{:^25}".format("Analyze") }}</header> ║
 ╚═══════════════════════════╝
 <header>Summary</header>:
-- <key>Extracted IP count</key>: <value>{{ result.summary.extracted_ip_count }}</value>
+- <key>IP count</key>: <value>{{ result.summary.ip_count }}</value>
 - <key>Noise IP count</key>: <value>{{ result.summary.noise_ip_count }}</value>
 - <key>Not noise IP count</key>: <value>{{ result.summary.not_noise_ip_count }}</value>
-- <key>Noise/Not noise ratio</key>: <value>{{ "%.2f" | format(result.summary.noise_not_noise_ratio) }}</value>
+- <key>Noise IP ratio</key>: <value>{{ "%.2f" | format(result.summary.noise_ip_ratio) }}</value>
 
 <header>Queries</header>:
 {%- call(query) macros.verbose_list(result.query) -%}
