add spoofable txt output to all commands

--- a/src/greynoise/cli/templates/ip_context_result_query.txt.j2
+++ b/src/greynoise/cli/templates/ip_context_result_query.txt.j2
@@ -22,7 +22,7 @@
 <key>Organization</key>: <value>{{ ip_context.metadata.organization }}</value>
 <key>OS</key>: <value>{{ ip_context.metadata.os }}</value>
 <key>rDNS</key>: <value>{{ ip_context.metadata.rdns }}</value>
-<key>Spoofable</key>: <value>{{ ip_context.metadata.spoofable|string }}</value>
+<key>Spoofable</key>: <value>{{ ip_context.spoofable|string }}</value>
 <key>Tor</key>: <value>{{ ip_context.metadata.tor }}</value>
 
           <header>RAW DATA</header>
