--- a/src/greynoise/cli/templates/gnql_query.txt.j2
+++ b/src/greynoise/cli/templates/gnql_query.txt.j2
@@ -5,7 +5,7 @@ Query: {{ result.query }}
 {%- if result.data %}
 {%- for ip_context in result.data %}
 {{ macros.result_header(loop) }}
-{%- include "ip_context_result.txt.j2" %}
+{%- include "ip_context_result_query.txt.j2" %}
 {%- endfor %}
 {% else %}
 No results found for this query.
