--- a/src/greynoise/cli/templates/riot.txt.j2
+++ b/src/greynoise/cli/templates/riot.txt.j2
@@ -21,7 +21,7 @@
 {%- else %}
 {% for ip_context in results %}
 {%- if ip_context.riot %}
-<riot>{{ ip_context.ip }}</riot> is in RIOT dataset.
+<riot>{{ ip_context.ip }}</riot> is in RIOT dataset. Name: <value>{{ ip_context.name }}</value> Category: <value>{{ ip_context.category }}</value> Last Updated: <value>{{ ip_context.last_updated }}</value>
 {%- else %}
 <not-riot>{{ ip_context.ip }}</not-riot> is <bold>NOT FOUND</bold> in RIOT dataset.
 {%- endif %}
