--- a/src/greynoise/cli/templates/ip_quick_check.txt.j2
+++ b/src/greynoise/cli/templates/ip_quick_check.txt.j2
@@ -1,6 +1,8 @@
 {% for ip_quick_check in results %}
 {%- if ip_quick_check.noise %}
 <noise>{{ ip_quick_check.ip }}</noise> is classified as <bold>NOISE</bold>.
+{%- elif ip_quick_check.message %}
+{{ ip_quick_check.message }}
 {%- else %}
 <not-noise>{{ ip_quick_check.ip }}</not-noise> is classified as <bold>NOT NOISE</bold>.
 {%- endif %}
