--- a/src/greynoise/cli/templates/riot.txt.j2
+++ b/src/greynoise/cli/templates/riot.txt.j2
@@ -9,6 +9,7 @@
 <key>IP</key>: <value>{{ ip_context.ip }}</value>
 <key>RIOT</key>: {{ macros.classification(ip_context.riot) }}
 <key>Category</key>: <value>{{ ip_context.category }}</value>
+<key>Trust Level</key>: <value>{{ ip_context.trust_level }}</value>
 <key>Name</key>: <value>{{ ip_context.name }}</value>
 <key>Description</key>: <value>{{ ip_context.description }}</value>
 <key>Explanation</key>: <value>{{ ip_context.explanation }}</value>
@@ -21,7 +22,7 @@
 {%- else %}
 {% for ip_context in results %}
 {%- if ip_context.riot %}
-<riot>{{ ip_context.ip }}</riot> is in RIOT dataset. Name: <value>{{ ip_context.name }}</value> Category: <value>{{ ip_context.category }}</value> Last Updated: <value>{{ ip_context.last_updated }}</value>
+<riot>{{ ip_context.ip }}</riot> is in RIOT dataset. Name: <value>{{ ip_context.name }}</value> Category: <value>{{ ip_context.category }}</value> Trust Level: <value>{{ ip_context.trust_level }}</value> Last Updated: <value>{{ ip_context.last_updated }}</value>
 {%- elif ip_context.message %}
 {{ ip_context.message }}
 {%- else %}
