--- a/src/greynoise/cli/templates/similarity.txt.j2
+++ b/src/greynoise/cli/templates/similarity.txt.j2
@@ -18,9 +18,9 @@
 
           <header>IP Similarity - Top 25 Results</header>
           -------------------------------
-<key>{{ '%-15s' | format('IP') }}</key><key>{{ '%-15s' | format('Score') }}</key><key>{{ '%-17s' | format('Classification') }}</key><key>{{ '%-25s' | format('Actor') }}</key><key>{{ '%-15s' | format('Last Seen') }}</key><key>{{ '%-20s' | format('Features Matched') }}</key>
+<key>{{ '%-15s' | format('IP') }}</key><key>{{ '%-15s' | format('Score') }}</key><key>{{ '%-17s' | format('Classification') }}</key><key>{{ '%-25s' | format('Actor') }}</key><key>{{ '%-15s' | format('Last Seen') }}</key><key>{{ '%-25s' | format('Organization') }}</key><key>{{ '%-20s' | format('Features Matched') }}</key>
 {%- for item in ip_context.similar_ips[:25] %}
-{{ '%-15s' | format(item.ip) }}{{ '%-15s' | format(item.score) }}{{ '%-17s' | format(item.classification) }}{{ '%-25s' | format(item.actor) }}{{ '%-15s' | format(item.last_seen) }}{{ '%-20s' | format(item.features|join(', ')) }}
+{{ '%-15s' | format(item.ip) }}{{ '%-15s' | format(item.score) }}{{ '%-17s' | format(item.classification) }}{{ '%-25s' | format(item.actor) }}{{ '%-15s' | format(item.last_seen) }}{{ '%-25s' | format(item.organization) }}{{ '%-20s' | format(item.features|join(', ')) }}
 
 {%- endfor %}
 
